2001-05-14  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/category-barchart.scm: fix bug.

2001-05-14  Dave Peticolas  <dave@krondo.com>

	* src/gnome/druid-qif-import.c: fix bug

	* src/engine/Account.c (xaccAccountGetChildren): fix bug

	* src/engine/sixtp-dom-generators.c (add_kvp_value_node): use
	xmlNewTextChild.

	* src/scm/report/register.scm: reverse balance where appropriate.
	put total in proper column.

	* src/scm/report/price-scatter.scm: use a commodity option
	so stocks/mutuals can be selected.

	* src/engine/gnc-book.c (gnc_book_begin_file): check for missing
	directory

	* src/gnome/file-history.c (gnc_history_add_file): fix bug

2001-05-13  Kevin Finn  <kevinfinn@mediaone.net>

   * src/gnome/window-register.c:  flag summarybar as NEVER_VERTICAL

2001-05-13  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/portfolio.scm: Added price-source option. Added
	code to use prices from transactions.

	* src/scm/commodity-utilities.scm: fix warnings.

2001-05-13  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncPostFileOpen): fix bug -- current_book
	might be changed by book-opened-hook.

	* src/scm/tip-list.scm: fix tip

	* src/engine/Account.c (finder_help_function): fix warning

2001-05-13  Kevin Finn  <kevinfinn@mediaone.net>

	* src/SplitLedger.c, src/engine/Account.c, src/engine/Account.h:
	moved function gnc_find_trans_in_account_by_desc from SR to become
	new functions xaccAccountFindTransByDesc and
	xaccAccountFindSplitByDesc so they could be used outside of the
	register code.

	* src/gnome/dialog-transfer.c: Added quickfill/autocomplete
	functionality to the transfer dialog, based on the Description.

2001-05-13  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: write commodities with accounts

	* src/engine/io-gncxml-v2.c (write_commodities): make public

	* src/gnome/new-user.glade: tweak gui

	* src/gnome/window-main.c: the "destroy" handler does not